--- a/.github/workflows/add-collaborator.yml
+++ b/.github/workflows/add-collaborator.yml
@@ -16,6 +16,12 @@ on:
 jobs:
   add-collaborator:
     runs-on: ubuntu-latest
+    permissions:
+      actions: write
+      contents: write
+      id-token: write
+      packages: write
+      repository-projects: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
