--- a/.github/workflows/add-collaborator.yml
+++ b/.github/workflows/add-collaborator.yml
@@ -35,6 +35,6 @@ jobs:
         run: |
           ./scripts/add-collaborator-to-repository.sh
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
         
 
